--- a/app/components/hyperui_component/alert/popup.html.erb
+++ b/app/components/hyperui_component/alert/popup.html.erb
@@ -4,20 +4,7 @@
 >
   <div class="flex items-start gap-4">
     <span class="text-green-600">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="h-6 w-6"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-        />
-      </svg>
+      <%= render HyperUIComponent::Icon.new("check-circle") %>
     </span>
 
     <div class="flex-1">
@@ -28,27 +15,21 @@
       <p class="mt-1 text-sm text-gray-700 dark:text-gray-200">
         Your product changes have been saved.
       </p>
-    </div>
 
+      <% if actions? %>
+      <div class="mt-4 flex gap-2">
+        <% actions.each do |action| %>
+          <%= action %>
+        <% end %>
+      </div>
+      <% end %>
+    </div>
     <button
       class="text-gray-500 transition hover:text-gray-600 dark:text-gray-400 dark:hover:text-gray-500"
     >
       <span class="sr-only">Dismiss popup</span>
 
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="h-6 w-6"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M6 18L18 6M6 6l12 12"
-        />
-      </svg>
+      <%= render HyperUIComponent::Icon.new("x") %>
     </button>
   </div>
 </div>
