--- a/app/components/hyperui_component/alert/popup_with_actions.html.erb
+++ b/app/components/hyperui_component/alert/popup_with_actions.html.erb
@@ -4,20 +4,7 @@
 >
   <div class="flex items-start gap-4">
     <span class="text-green-600">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="h-6 w-6"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-        />
-      </svg>
+      <%= render HyperUIComponent::Icon.new("check-circle") %>
     </span>
 
     <div class="flex-1">
@@ -25,10 +12,7 @@
         Changes saved
       </strong>
 
-      <p
-        class="mt-1 text-sm text-gray-700 dark:text-gray-200"
-        dark:hover:bg-gray-800
-      >
+      <p class="mt-1 text-sm text-gray-700 dark:text-gray-200">>
         Your product changes have been saved.
       </p>
 
@@ -39,20 +23,7 @@
         >
           <span class="text-sm"> Preview </span>
 
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="h-4 w-4"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25"
-            />
-          </svg>
+          <%= render HyperUIComponent::Icon.new("arrow-top-right-on-square") %>
         </a>
 
         <button
@@ -67,21 +38,7 @@
       class="text-gray-500 transition hover:text-gray-600 dark:text-gray-400 dark:hover:text-gray-500"
     >
       <span class="sr-only">Dismiss popup</span>
-
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="h-6 w-6"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M6 18L18 6M6 6l12 12"
-        />
-      </svg>
+        <%= render HyperUIComponent::Icon.new("x") %>
     </button>
   </div>
 </div>
