--- a/app/components/hyperui_component/alert/popup.html.erb
+++ b/app/components/hyperui_component/alert/popup.html.erb
@@ -29,7 +29,7 @@
     >
       <span class="sr-only">Dismiss popup</span>
 
-      <%= render HyperUIComponent::Icon.new("x") %>
+      <%= heroicon "x-mark" %>
     </button>
   </div>
 </div>
